--- a/wp-content/themes/gsn/work-assets/scss/landing/components/_map.scss
+++ b/wp-content/themes/gsn/work-assets/scss/landing/components/_map.scss
@@ -16,7 +16,7 @@
 #pac-input {
   background-color: #fff;
   font-family: Roboto;
-  font-size: 15px;
+  font-size: rem($fs-body);
   font-weight: 300;
   margin-left: 12px;
   padding: 0 11px 0 13px;
@@ -36,7 +36,7 @@
 }
 #type-selector label {
   font-family: Roboto;
-  font-size: 13px;
+  font-size: rem($fs-tiny);
   font-weight: 300;
 }
 #target {
