--- a/wp-content/themes/gsn/work-assets/scss/dashboard/dashboard/_dashboard-header.scss
+++ b/wp-content/themes/gsn/work-assets/scss/dashboard/dashboard/_dashboard-header.scss
@@ -42,7 +42,7 @@ section {
 
 		h1 {
 			display: inline-block;
-			font-size: 26px;
+			font-size: rem($fs-big);
 			font-weight: bold;
 			line-height: 1;
 			margin-left: 20px;
@@ -117,7 +117,7 @@ section {
 					width: 30px;
 					text-align: center;
 					line-height: 50px;
-					font-size: 18px;
+					font-size: rem($fs-ebody);
 					position: relative;
 				}
 				span.nav-text {
@@ -148,7 +148,7 @@ section {
 	position: relative;
 
 	@include max-screen($mq-mobile) {
-		font-size: 26px;
+		font-size: rem($fs-big);
 	}
 
 	.profile-info {
@@ -201,7 +201,7 @@ section {
 	span {
 		background: rgba(0, 0, 0, 0.5);
 		padding: 5px 15px;
-		font-size: 14px;
+		font-size: rem($fs-small);
 		margin-left: 8px;
 		border-radius: 4px;
 		position: relative;
@@ -228,7 +228,7 @@ section {
   text-transform: uppercase;
 
   @include max-screen($mq-mobile) {
-  	font-size: 12px;
+  	font-size: rem($fs-tiny);
   	margin-top: 11px;
   }
 
