--- a/wp-content/themes/gsn/work-assets/scss/landing/components/_global.scss
+++ b/wp-content/themes/gsn/work-assets/scss/landing/components/_global.scss
@@ -1,5 +1,6 @@
 body {
-  font-size: 14px;
+  font-size: rem($fs-small);
+  font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', Helvetica, Arial, sans-serif
 }
 h1,
 h2,
@@ -26,7 +27,7 @@ ul {
   font-size: 0;
 }
 li {
-  font-size: rem(16px);
+  font-size: rem($fs-body);
   display: inline-block;
 }
 select {
@@ -73,7 +74,7 @@ select {
 label.error {
   color: red;
   display: block;
-  font-size: 12px;
+  font-size: rem($fs-tiny);
   margin-top: 3px;
 }
 .btn {
