--- a/wp-content/themes/gsn/work-assets/scss/landing/style.scss
+++ b/wp-content/themes/gsn/work-assets/scss/landing/style.scss
@@ -12,3 +12,10 @@
 @import "components/map";
 @import "components/alert";
 /* ====== Import COMPONENT CSS END ====== */
+
+@import "layouts/header";
+@import "layouts/footer";
+
+@import "layouts/main/sec-cta";
+@import "layouts/main/sec-find-shop";
+@import "layouts/main/sec-featured-shops";
