--- a/wp-content/themes/gsn/work-assets/scss/theme/components/_global.scss
+++ b/wp-content/themes/gsn/work-assets/scss/theme/components/_global.scss
@@ -1,5 +1,5 @@
 body {
-  font-size: 14px;  
+  font-size: rem($fs-small);  
 }
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
@@ -60,7 +60,7 @@ select {
 label.error {
   color: red;
   display: block;
-  font-size: 12px;
+  font-size: rem($fs-tiny); 
   margin-top: 3px;
 }
 .btn {
