--- a/wp-content/themes/gsn/work-assets/scss/theme/theme/_theme-footer.scss
+++ b/wp-content/themes/gsn/work-assets/scss/theme/theme/_theme-footer.scss
@@ -6,7 +6,7 @@
   &__items {
 
     h3 {      
-      font-size: 16px;      
+      font-size: rem($fs-body);    
       font-weight: bold;
       padding-bottom: 25px;
       text-transform: uppercase;      
@@ -33,7 +33,7 @@
     }
 
     a {
-      font-size: 20px;
+      font-size: rem($fs-medium);
     }
   }
 }
@@ -65,7 +65,7 @@
 
   a {
     color: $light_gray;
-    font-size: 12px;
+    font-size: rem($fs-tiny);
     line-height: 1;
     text-transform: uppercase;
 
@@ -84,7 +84,7 @@
   a {
     background: $brick_red;    
     color: $white;
-    font-size: 24px;    
+    font-size: rem($fs-mbig);    
     height: 40px;
     width: 40px;
     text-align: center;
