--- a/wp-content/themes/gsn/work-assets/scss/theme/theme/_theme-product-single.scss
+++ b/wp-content/themes/gsn/work-assets/scss/theme/theme/_theme-product-single.scss
@@ -47,11 +47,11 @@
 				width: 64%;
 				background: $white_smoke;
 				padding: 20px;
-				font-size: 14px;
+				font-size: rem($fs-small);
 				min-height: 400px;
 
 				h1.product_title {
-					font-size: 24px;
+					font-size: rem($fs-mbig);
 					margin: 0 0 15px 0;
 
 					&::after {
@@ -119,7 +119,7 @@
 						border-radius: 0;
 						transition: all 0.3s ease;
 						margin-right: 10px;
-						font-size: 16px;
+						font-size: rem($fs-body);
 
 						&:hover {
 							background-color: $petal_green;
@@ -203,7 +203,7 @@
 						}
 						h3 {
 							margin: 20px 0;
-							font-size: 20px;
+							font-size: rem($fs-medium);
 							border-bottom: 1px solid $light_gray;
 							padding-bottom: 10px;
 							font-weight: 700;
@@ -249,7 +249,7 @@
 					background: #555;
 					color: #fff;
 					font-style: italic;
-					font-size: 1rem;
+					font-size: rem($fs-body);
 					line-height: 1.5;
 					font-weight: 400;
 					padding: 15px 20px;
@@ -312,14 +312,14 @@
 
 			a {
 				text-decoration: none;
-				font-size: 20px;
+				font-size: rem($fs-medium);
 				margin-right: 3px;
 			}
 		}
 	}
 	.star-rating, .stars {
 		letter-spacing: 3px;
-		font-size: 14px;
+		font-size: rem($fs-small);
 		width: 6.4em;
 		margin: 7px 4px 0 0;
 		float: none;
@@ -364,7 +364,7 @@
 	a {
 		display: inline-block;
 		margin-right: 5px;
-		font-size: 16px;
+		font-size: rem($fs-body);
 		width: 35px;
 		height: 35px;
 		padding: 5px;
