--- a/wp-content/themes/gsn/work-assets/scss/landing/layouts/_header.scss
+++ b/wp-content/themes/gsn/work-assets/scss/landing/layouts/_header.scss
@@ -41,7 +41,7 @@
         position: absolute;
         top: 100%;
         height: 2px;
-        width: calc(100% - 25px);
+        width: 25px;
         background: $dark__gray;
         left: 50%;
         transform: translateX(-50%) scale(0);
