Finished header, CTA and Find a shop custom select and added missing files

--- a/wp-content/themes/gsn/work-assets/scss/COMMON-STYLES-DEFINATIONS/base/_variable.scss
+++ b/wp-content/themes/gsn/work-assets/scss/COMMON-STYLES-DEFINATIONS/base/_variable.scss
@@ -50,6 +50,8 @@ $fs-big: 26px;
 $fs-large: 30px;
 $fs-elarge: 48px;
 
+$fw-l: 300;
 $fw-reg: 400;
 $fw-sbold: 600;
 $fw-bold: 700;
+$fw-ebold: 800;
