--- a/wp-content/themes/gsn/work-assets/scss/landing/style.scss
+++ b/wp-content/themes/gsn/work-assets/scss/landing/style.scss
@@ -7,10 +7,13 @@
 @import "components/landing";
 @import "components/map";
 @import "components/alert";
+@import "components/cta-buttons";
+@import "components/select";
 
 @import "layouts/header";
 @import "layouts/footer";
 
-@import "layouts/main/sec-cta";
-@import "layouts/main/sec-find-shop";
-@import "layouts/main/sec-featured-shops";
+@import "layouts/sections/common";
+@import "layouts/sections/cta";
+@import "layouts/sections/find-shop";
+@import "layouts/sections/featured-shops";
