Created Featured section, Designed find store section and some changes in header

--- a/wp-content/themes/gsn/work-assets/scss/landing/layouts/sections/_cta.scss
+++ b/wp-content/themes/gsn/work-assets/scss/landing/layouts/sections/_cta.scss
@@ -1,5 +1,9 @@
 .gsn-lmcta {
-  background: #F6F9FC;
+  background: #b5e3bc;
+
+  h1 {
+    color: #022a07;
+  }
 
   &__btns {
     margin-top: 50px;
