--- a/wp-content/themes/gsn/work-assets/scss/landing/layouts/_header.scss
+++ b/wp-content/themes/gsn/work-assets/scss/landing/layouts/_header.scss
@@ -1,5 +1,7 @@
 .gsn-lheader {
-  // border-bottom: 2px solid $petal_green;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
+  z-index: 2;
+  position: relative;
 
   &__wrapper {
     display: flex;
@@ -23,6 +25,7 @@
     font-weight: 600;
     text-transform: uppercase;
     color: $dark__gray;
+    font-size: rem($fs-sbody);
     
     @include min-screen($mq-min-mobile) {
       &:hover {
