--- a/wp-content/themes/gsn/work-assets/scss/landing/style.scss
+++ b/wp-content/themes/gsn/work-assets/scss/landing/style.scss
@@ -10,6 +10,8 @@
 @import "components/alert";
 @import "components/cta-buttons";
 @import "components/select";
+@import "components/input";
+@import "components/card";
 
 @import "layouts/header";
 @import "layouts/footer";
