Added range and button for find a store

--- a/wp-content/themes/gsn/work-assets/scss/landing/components/_select.scss
+++ b/wp-content/themes/gsn/work-assets/scss/landing/components/_select.scss
@@ -5,6 +5,10 @@
     display: flex;
     flex-direction: column;
     font-size: rem($fs-body);
+
+    &--small {
+      width: 100px;
+    }
   }
 
   // s == select (i.e. stoggle => select__toggle)
