--- a/wp-content/themes/gsn/work-assets/scss/landing/style.scss
+++ b/wp-content/themes/gsn/work-assets/scss/landing/style.scss
@@ -12,6 +12,7 @@
 @import "components/select";
 @import "components/input";
 @import "components/card";
+@import "components/buttons";
 
 @import "layouts/header";
 @import "layouts/footer";
