--- a/wp-content/themes/gsn/work-assets/scss/landing/components/_card.scss
+++ b/wp-content/themes/gsn/work-assets/scss/landing/components/_card.scss
@@ -31,7 +31,7 @@
     background-color: #fff;
     border-radius: 4px;
     box-shadow: 0 15px 35px rgba(50,50,93,.1), 0 5px 15px rgba(0,0,0,.07);
-    height: 130px;
+    height: 140px;
     overflow: hidden;
     @include transition;
 
@@ -39,6 +39,12 @@
       &:hover {
         transform: translateY(-2px);
         box-shadow: 0 18px 35px rgba(50,50,93,.1), 0 8px 15px rgba(0,0,0,.07);
+
+        .gsn-card__view {
+          svg {
+            transform: translateX(5px);
+          }
+        }
       }
 
       &:active {
@@ -50,11 +56,11 @@
   }
 
   &__img {
-    width: 37%;
+    width: 35%;
   }
 
   &__info {
-    width: 63%;
+    width: 65%;
     padding-left: 25px;
     text-align: left;
     color: $dark__gray;
@@ -75,5 +81,24 @@
     font-size: rem($fs-small);
     font-weight: $fw-reg;
     color: #9e9e9e;
+  }
+
+  &__view {
+    font-size: rem($fs-small);
+    font-weight: $fw-sbold;
+    color: #404040;
+    margin-top: 3px;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+
+    svg {
+      display: inline-block;
+      width: 20px;
+      height: 15px;
+      margin-top: 6px;
+      margin-left: 5px;
+      @include transition;
+    }
   }
 }
