--- a/wp-content/themes/gsn/work-assets/scss/landing/layouts/sections/_find-shop.scss
+++ b/wp-content/themes/gsn/work-assets/scss/landing/layouts/sections/_find-shop.scss
@@ -1,6 +1,6 @@
 .gsn-lmfind {
   &__filter {
-    margin: 0 20px;
+    margin: 0 15px;
 
     > span {
       font-size: rem($fs-small);
@@ -16,7 +16,7 @@
       margin-bottom: 55px;
       display: flex;
       justify-content: center;
-      align-items: center;
+      align-items: flex-end;
     }
   }
 }
