Files refactored and some footer content

--- a/wp-content/themes/gsn/work-assets/scss/COMMON-STYLES-DEFINATIONS/base/_variable.scss
+++ b/wp-content/themes/gsn/work-assets/scss/COMMON-STYLES-DEFINATIONS/base/_variable.scss
@@ -37,6 +37,12 @@ $dark__gray: #252525;
 $white_smoke: #f5f5f5;
 $rating_color: #ffae00;
 
+
+// MAIN SITE COLORS
+$p-green: #68BD74;
+$p-lgreen: #78ca83;
+
+
 // Font Sizes, Family and Weights
 $fs-etiny: 11px;
 $fs-tiny: 12px;
