--- a/wp-content/themes/gsn/work-assets/scss/landing/style.scss
+++ b/wp-content/themes/gsn/work-assets/scss/landing/style.scss
@@ -1,9 +1,14 @@
 /* Common Styles */
 
-@import "../COMMON-STYLES-DEFINATIONS/common";
+@import "../COMMON-STYLES-DEFINATIONS/base/mixin";
+@import "../COMMON-STYLES-DEFINATIONS/base/variable";
+
+@import "base/reset";
+@import "base/types";
 
 /* ====== Import COMPONENT CSS ====== */
 
+@import "layouts/common";
 @import "components/global";
 @import "components/landing";
 @import "components/map";
