--- a/wp-content/themes/gsn/work-assets/scss/landing/components/_card.scss
+++ b/wp-content/themes/gsn/work-assets/scss/landing/components/_card.scss
@@ -64,10 +64,12 @@
     padding-left: 25px;
     text-align: left;
     color: $dark__gray;
+    flex: 1;
   }
 
   &__name {
     font-size: rem($fs-body);
+    font-weight: $fw-bold;
   }
 
   &__category {
@@ -78,7 +80,7 @@
   }
 
   &__location {
-    font-size: rem($fs-small);
+    font-size: rem(11px);
     font-weight: $fw-reg;
     color: #9e9e9e;
   }
