--- a/wp-content/themes/gsn/work-assets/scss/landing/layouts/_footer.scss
+++ b/wp-content/themes/gsn/work-assets/scss/landing/layouts/_footer.scss
@@ -10,7 +10,7 @@
     min-width: 17%;
 
     &--info {
-      border-right: 1px solid $dark__gray;
+      border-right: 1px solid #dfdfdf;
       padding-right: 100px;
     }
   }
