--- a/wp-content/themes/gsn/work-assets/scss/landing/style.scss
+++ b/wp-content/themes/gsn/work-assets/scss/landing/style.scss
@@ -1,7 +1,8 @@
 /* Common Styles */
 
-@import "../COMMON-STYLES-DEFINATIONS/base/mixin";
-@import "../COMMON-STYLES-DEFINATIONS/base/variable";
+@import "../COMMON-STYLES-DEFINATIONS/common";
+// @import "../COMMON-STYLES-DEFINATIONS/base/mixin";
+// @import "../COMMON-STYLES-DEFINATIONS/base/variable";
 
 @import "base/reset";
 @import "base/types";
