--- a/wp-content/themes/gsn/work-assets/scss/landing/components/_buttons.scss
+++ b/wp-content/themes/gsn/work-assets/scss/landing/components/_buttons.scss
@@ -1,28 +1,19 @@
 .gsn-custom {
   &__btn {
-    border: 0;
-    border-radius: 4px;
-    height: 50px;
-    line-height: 40px;
-    box-shadow: 0 4px 6px rgba(50,50,93,.11), 0 1px 3px rgba(0,0,0,.08);
-    font-family: 'Open sans',sans-serif;
-    padding: 5px 15px;
-    width: 120px;
-    font-size: rem($fs-body);
-    font-weight: $fw-sbold;
-    outline: 0;
-    letter-spacing: .025em;
-    cursor: pointer;
-    @include transition;
+    @include common-btn;
 
     &--green {
       color: $white;
       background: $petal_green;
   
       @include min-screen($mq-min-mobile) {
-        &:hover, &:focus {
+        &:hover {
           background: #78ca83;
           color: $white;
+        }
+
+        &:focus {
+          background: #73c37d;
         }
   
         &:active {
@@ -32,16 +23,95 @@
       }
     }
 
-    @include min-screen($mq-min-mobile) {
-      &:hover {
-        transform: translateY(-1px);
-        box-shadow: 0 7px 14px rgba(50,50,93,.1), 0 3px 6px rgba(0,0,0,.08);
-      }
+    &--blue {
+      background: #393de8;
+      color: $white;
+
+      @include min-screen($mq-min-mobile) {
+        &:hover {
+          background: #385ce6;
+        }
+
+        &:focus {
+          background: #385ce6;
+        }
   
-      &:active {
-        transform: translateY(1px);
-        box-shadow: 0 4px 6px rgba(50,50,93,.11), 0 1px 3px rgba(0,0,0,.08);
+        &:active {
+          background: #2b2ed6;
+        }
       }
+    }
+
+    &--grey {
+      background: #555;
+      color: $white;
+      
+      @include min-screen($mq-min-mobile) {
+        &:hover {
+          background: #5a5a5a;
+        }
+
+        &:focus {
+          background: #4e4e4e;
+        }
+
+        &:active {
+          background: #1b1b1b;
+        }
+      }
+    }
+
+    &--white {
+      background: #f2f8ff;
+      color: $petal_green;
+
+      @include min-screen($mq-min-mobile) {
+        &:hover {
+          color: #78ca83;
+        }
+
+        &:focus {
+          color: #88df93;
+        }
+
+        &:active {
+          background: #e7eef7;
+          color: #5aa965;
+        }
+      }
+    }
+
+    &--small {
+      height: 40px;
+      line-height: 40px;
+      padding: 0 10px;
+      width: 100px;
+    }
+
+    &--medium {
+      height: 50px;
+      line-height: 50px;
+      padding: 0 10px;
+      width: 120px;
+      font-size: rem($fs-body);
+    }
+
+    &--big {
+      height: 50px;
+      line-height: 50px;
+      font-size: rem($fs-body);
+      width: 160px;
+      text-transform: uppercase;
+    }
+
+    &--large {
+      text-transform: uppercase;
+      font-size: rem($fs-ebody);
+      font-weight: $fw-bold;
+      height: 60px;
+      line-height: 60px;
+      padding: 0 20px;
+      min-width: 200px;
     }
   }
 }
