--- a/wp-content/themes/gsn/work-assets/scss/landing/style.scss
+++ b/wp-content/themes/gsn/work-assets/scss/landing/style.scss
@@ -11,6 +11,7 @@
 
 @import "layouts/common";
 @import "components/global";
+@import "components/fluidbox";
 @import "components/map";
 @import "components/alert";
 @import "components/select";
