Docs page images and section finished and few responsive changes in homepage

--- a/wp-content/themes/gsn/work-assets/scss/landing/base/_types.scss
+++ b/wp-content/themes/gsn/work-assets/scss/landing/base/_types.scss
@@ -1,3 +1,10 @@
 .ta-c {
   text-align: center;
 }
+
+.gsn-page {
+  &__title {
+    font-size: rem($fs-large);
+    font-weight: $fw-sbold;
+  }
+}
