--- a/wp-content/themes/gsn/work-assets/scss/landing/style.scss
+++ b/wp-content/themes/gsn/work-assets/scss/landing/style.scss
@@ -11,7 +11,6 @@
 
 @import "layouts/common";
 @import "components/global";
-@import "components/fluidbox";
 @import "components/map";
 @import "components/alert";
 @import "components/select";
@@ -21,6 +20,7 @@
 
 @import "layouts/header";
 @import "layouts/footer";
+@import "layouts/inner-hero";
 
 @import "layouts/sections/common";
 @import "layouts/sections/cta";
@@ -30,3 +30,8 @@
 // Form elements
 @import "layouts/forms/layout";
 @import "layouts/forms/input";
+
+// pages
+
+// Documentation
+@import "pages/docs/steps";
