--- a/wp-content/themes/gsn/work-assets/scss/landing/components/_card.scss
+++ b/wp-content/themes/gsn/work-assets/scss/landing/components/_card.scss
@@ -1,25 +1,3 @@
-// .gsn-clist {
-//   &__link {
-
-//     @include min-screen($mq-min-mobile) {
-//       &:hover {
-//         .gsn-card__wrapper {
-//           transform: translateY(-2px);
-//           box-shadow: 0 18px 35px rgba(50,50,93,.1), 0 8px 15px rgba(0,0,0,.07);
-//         }
-//       }
-//     }
-
-//     &:active {
-//       .gsn-card__wrapper {
-//         background: #F2F4F6;
-//         transform: translateY(2px);
-//         box-shadow: 0 11px 20px rgba(50,50,93,.1), 0 6px 11px rgba(0,0,0,.08);
-//       }
-//     }
-//   }
-// }
-
 .gsn-card {
 
   &__wrapper {
@@ -31,7 +9,8 @@
     background-color: #fff;
     border-radius: 4px;
     box-shadow: 0 15px 35px rgba(50,50,93,.1), 0 5px 15px rgba(0,0,0,.07);
-    height: 140px;
+    min-height: 140px;
+    height: 100%;
     overflow: hidden;
     @include transition;
 
