--- a/wp-content/themes/gsn/work-assets/scss/landing/layouts/sections/_find-shop.scss
+++ b/wp-content/themes/gsn/work-assets/scss/landing/layouts/sections/_find-shop.scss
@@ -13,12 +13,41 @@
       margin-bottom: 5px;
     }
 
-    &__wrapper {
-      margin-top: 50px;
-      margin-bottom: 55px;
+    &__wrapper {      
+      margin-top: 20px;
+      margin-bottom: 40px;
       display: flex;
       justify-content: center;
       align-items: flex-end;
+      flex-wrap: wrap;
+      margin-left: -15px;
+      margin-right: -15px;
+
+      @include min-screen(768px) {
+        margin-top: 50px;
+        margin-bottom: 55px;
+        margin-left: 0;
+        margin-right: 0;
+      }
+    }
+
+    &--btn {
+      margin-top: 15px;
+    }
+
+    @include max-screen(767px) {
+      width: 100%;
+      margin: 0;
+      margin-top: 15px;
+      padding: 0 15px;
+
+      > div, > input, > button {
+        width: 100%;
+      }
+
+      &:nth-last-child(-n + 2) {        
+        width: 50%;
+      }
     }
   }
 }
