--- a/wp-content/themes/gsn/work-assets/scss/landing/components/_card.scss
+++ b/wp-content/themes/gsn/work-assets/scss/landing/components/_card.scss
@@ -11,6 +11,7 @@
     box-shadow: 0 15px 35px rgba(50,50,93,.1), 0 5px 15px rgba(0,0,0,.07);
     min-height: 140px;
     height: 100%;
+    width: 100%;
     overflow: hidden;
     @include transition;
 
