--- a/wp-content/themes/gsn/work-assets/scss/landing/layouts/_footer.scss
+++ b/wp-content/themes/gsn/work-assets/scss/landing/layouts/_footer.scss
@@ -3,15 +3,28 @@
   box-shadow: inset 0 1px 6px 0 rgba(0, 0, 0, 0.2);
 
   &__top {
-    padding: 50px 0;
+    padding: 40px 0;
+
+    @include min-screen($mq-min-mobile) {
+      padding: 50px 0;
+    }
   }
 
   &__col {
-    padding: 0 15px;
-    min-width: 17%;
+    padding: 0 !important;
+
+    &:not(:last-child) {
+      margin-bottom: 20px;
+    }    
+
+    @include min-screen($mq-min-mobile) {
+      min-width: 17%;
+      margin-bottom: 0;
+      padding: 0 15px;
+    }
 
     &--info {
-      border-right: 1px solid #dfdfdf;
+      // border-right: 1px solid #dfdfdf;
       // padding-right: 100px;
     }
   }
@@ -31,7 +44,11 @@
   }
 
   &__qinfo {
-    margin-top: 10px;
+    margin-top: 15px;
+
+    @include min-screen($mq-min-mobile) {
+      margin-top: 10px;
+    }
 
     b, span {
       display: block;
@@ -39,10 +56,15 @@
     }
 
     a {
-      font-size: rem($fs-medium);
+      font-size: rem($fs-ebody);      
+      margin: 5px 0;
       font-weight: $fw-bold;
-      margin: 3px 0 0;
       @include inline-anchor($dark__gray);
+
+      @include min-screen($mq-min-mobile) {
+        font-size: rem($fs-medium);
+        margin: 3px 0 0;
+      }
     }
   }
 
@@ -110,11 +132,24 @@
   &__bcontent {
     display: flex;
     justify-content: center;
+    text-align: center;
   }
 
   &__bitem {
-    margin: 0 15px;
+    margin: 0 10px;
     font-size: rem($fs-tiny);
+
+    @include max-screen($mq-mobile) {
+      margin-top: 5px;
+      
+      &:first-child {
+        margin: 0;
+      }
+    }
+
+    @include min-screen($mq-min-mobile) {
+      margin: 0 15px;
+    }
   }
 
   &__blink {
