--- a/wp-content/themes/gsn/work-assets/scss/landing/layouts/forms/_layout.scss
+++ b/wp-content/themes/gsn/work-assets/scss/landing/layouts/forms/_layout.scss
@@ -199,7 +199,7 @@
       text-align: center;
       text-transform: uppercase;
       margin-bottom: 30px;
-      font-weight: $fw-l;
+      font-weight: $fw-sbold;
       font-size: rem($fs-mbig);
       position: relative;
       letter-spacing: 8px;
